WIP nsfw api uniformity
